--- a/action.yml
+++ b/action.yml
@@ -26,7 +26,7 @@ runs:
     with:
       python-version: 3.9
       cache: 'pip'
-      cache-dependency-path: '**/requirements.txt'
+      cache-dependency-path: '$GITHUB_ACTION_PATH/requirements.txt'
   - name: Install requirement
     run: pip install -r $GITHUB_ACTION_PATH/requirements.txt
     shell: bash
