--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           run: |
             pip install pyinstaller
             pyinstaller -F --hidden-import=PIL._tkinter_finder --additional-hooks-dir=hooks reactivate.py
-            pyinstaller -F --hidden-import=PIL._tkinter_finder --additional-hooks-dir=hooks ./tools/get-cookie.py
+            pyinstaller -F --hidden-import=PIL._tkinter_finder --additional-hooks-dir=hooks ./tools/get_cookie.py
         - name: Upload
           uses: actions/upload-artifact@v4
           with: 
