--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                os: [macos-latest,ubuntu-latest,windows-latest,macos-13]
+                os: [macos-latest,ubuntu-22.04,windows-latest,macos-13]
         runs-on: ${{matrix.os}}
         steps:
         - uses: actions/checkout@v4
